# score-system

./: .gitignore  README.md  skills.md
.github/workflows/: ci.yml
programs/score-system/: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
programs/score-system/.github/workflows/: ci.yml
programs/score-system/app/: Cargo.toml
programs/score-system/app/src/: lib.rs
programs/score-system/client/: Cargo.toml  build.rs  score_system_client.idl
programs/score-system/client/src/: lib.rs  score_system_client.rs
programs/score-system/src/: lib.rs
programs/score-system/tests/: gtest.rs
