[package]
name = "score-system-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Package containing the client for the program allowing to interact with it"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
sails-rs.workspace = true

[build-dependencies]
sails-rs = { workspace = true, features = ["build"] }
score-system-app.workspace = true
